_sass/main.scss
body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  color: black;
}

nav {
  display: flex;
  align-items: center;
  justify-content: center;
  align-self: center;
  width: 100%;
  min-width: 400px;
  background-color: #3E4E50;
  position: fixed;
  top: 0;
}

.navbar-inner {
  display: flex;
  flex-direction: row;
  width: 800px;
  padding-inline: 20px;
  min-width: 400px;
}

.navbar-inner-mobile {
  display: flex;
  flex-direction: row;
  width: 90%;
  padding-inline: 20px;
}

.nav-item {
  text-align: left;
  font-size: 20px;
  margin-right: 50px;
  padding-top: 20px;
  padding-bottom: 20px;
  color: white;
  text-decoration: none;
}

.nav-name {
  text-align: left;
  font-size: 20px;
  margin-right: 100px;
  padding-top: 20px;
  padding-bottom: 20px;
  color: white;
  text-decoration: none;
}

.nav-item-mobile {
  text-align: left;
  font-size: 16px;
  margin-right: 30px;
  padding-top: 20px;
  padding-bottom: 20px;
  color: white;
  text-decoration: none;
}

nav a {
  text-decoration: none;
}

a {
  text-decoration: none;
}

.most-outer-container {
  width: 100%;
  align-items: center;
  justify-content: center;
  align-self: center;
}

.two-column-outer-container {
  display: flex;
  align-items: center;
  justify-content: center;
  align-self: center;
  width: 100%;
  min-width: 400px;
  background-color: #D7D7D7;
}

.two-column-inner {
  display: flex;
  flex-direction: row;
  width: 800px;
  margin-top: 30px;
  padding-inline: 20px;
  padding-top: 100px;
  padding-bottom: 70px;
}

.two-column-inner-mobile {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 370px;
  padding-top: 100px;
  padding-bottom: 100px;
}

.introduction-text {
  margin-left: 50px;
}

.introduction-text-mobile {
}

.publications-section-outer-color-container {
  background-color: #CFCED3;
  display: flex;
  justify-content: center;
  width: 100%;
  align-items: center;
}

.publications-section-inner {
  width: 800px;
  text-align: justify;
  padding-top: 50px;
  padding-bottom: 50px;
  color: black;
}

.publications-section-inner-mobile {
  width: 370px;
  text-align: justify;
  padding-top: 50px;
  padding-bottom: 50px;
  color: black;
}

.news-section-outer-color-container {
  background-color: #C7D3DD;
  display: flex;
  justify-content: center;
  width: 100%;
  align-items: center;
}

.news-section-inner {
  text-align: justify;
  width: 800px;
  padding-top: 50px;
  padding-bottom: 50px;
  color: black;
}

.news-section-inner-mobile {
  text-align: justify;
  width: 370px;
  padding-top: 50px;
  padding-bottom: 50px;
  color: black;
}

.title-with-less-bottom-margin {
  margin-bottom: 0px;
}

.name {
  width: 370px;
}

.justified-text {
  font-size: 16px;
  text-align: justify;
}

.social-icon {
  width: 30px;
  height: 30px;
  margin-left: 15px;
}

.picture {
  border-radius: 50%;
  margin-left: 25px;
  width: 200px;
  height: 200px;
}

.social-icon-list {
  display: flex;
  flex-direction: row;
  margin-left: 10px;
  margin-right: 10px;
  margin-top: 10px;
  width: 210px;
  align-items: center;
}

.copyright-section-outer-color-container {
  background-color: #3E4E50;
  display: flex;
  justify-content: center;
  width: 100%;
  align-items: center;
}

.copyright-section-inner {
  text-align: justify;
  width: 800px;
  padding-top: 20px;
  padding-bottom: 20px;
  color: white;
  text-decoration: none;
}

a.a-copyright:visited {
  color: cornflowerblue;
}

.copyright-section-inner-mobile {
  text-align: justify;
  width: 370px;
  padding-top: 20px;
  padding-bottom: 20px;
  color: white;
  text-decoration: none;
}

.name-under-figure {
  font-size: 18px;
  width: 250px;
  text-align: center;
}

.email-under-figure {
  font-size: 12px;
  width: 250px;
  text-align: center;
}

.figure-description {
  font-size: 11px;
  width: 250px;
  text-align: center;
}

